ie fix
auto scale height of images on landing page to prevent height getting
stretched.

--- a/css/mohanbs-stylesheet.css
+++ b/css/mohanbs-stylesheet.css
@@ -247,6 +247,7 @@ hr {
 
 .card-img{
     width: 100%;
+    height: auto;
     top: 0;
 }
 
